Direct alignments no longer have nonfunctional resize corner

--- a/public/css/floatingitems.css
+++ b/public/css/floatingitems.css
@@ -446,6 +446,7 @@
 #directalignmentshelpcontent{
   width: 29.5vw;
   height: 48vh;
+  resize: none;
 }
 
 #generalhelppopup{
